docs: added update post endpoint documentation, fixed typo in unfollow user endpoint
